added operator overloading for simple HashTree comparison

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_test(NAME hash_structors COMMAND syncboxTest -t hash_structors)
 add_test(NAME hash_makeHash COMMAND syncboxTest -t hash_makeHash)
 add_test(NAME hash_tree_size_compare COMMAND syncboxTest -t hash_tree_size_compare)
@@ -6,7 +5,7 @@ add_test(NAME hash_tree_size_compare COMMAND syncboxTest -t hash_tree_size_compa
 # add_test(NAME hash_tree_compare COMMAND syncboxTest -t hash_tree_compare)
 add_test(NAME directory_manual COMMAND syncboxTest -t directory_manual)
 add_test(NAME directory_auto COMMAND syncboxTest -t directory_auto)
-add_test(NAME box_test COMMAND syncboxTest -t box_test)
+# add_test(NAME box_test COMMAND syncboxTest -t box_test)
 
 
 include_directories(../include)
