added test for HashTree::getChangedHashes()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ add_test(NAME hash_makeHash COMMAND syncboxTest -t hash_makeHash)
 add_test(NAME hash_tree_size_compare COMMAND syncboxTest -t hash_tree_size_compare)
 # add_test(NAME hash_tree_size_compare_random COMMAND syncboxTest -t hash_tree_size_compare_random)
 # add_test(NAME hash_tree_compare COMMAND syncboxTest -t hash_tree_compare)
+add_test(NAME hash_tree_compare_diff COMMAND syncboxTest -t hash_tree_compare_diff)
 add_test(NAME directory_manual COMMAND syncboxTest -t directory_manual)
 add_test(NAME directory_auto COMMAND syncboxTest -t directory_auto)
 # add_test(NAME box_test COMMAND syncboxTest -t box_test)
