Directory::getChangedHashes() + test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_test(NAME hash_tree_compare_diff COMMAND syncboxTest -t hash_tree_compare_di
 add_test(NAME hash_tree_sort COMMAND syncboxTest -t hash_tree_sort)
 add_test(NAME directory_manual COMMAND syncboxTest -t directory_manual)
 add_test(NAME directory_auto COMMAND syncboxTest -t directory_auto)
+add_test(NAME directory_compare COMMAND syncboxTest -t directory_compare)
 # add_test(NAME box_test COMMAND syncboxTest -t box_test)
 
 
