--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,10 @@ add_executable(syncboxTest testMain.cpp
                            ../src/hash.cpp
                            ../src/hash_tree.cpp
                            ../src/directory.cpp
-                           ../src/box.cpp)
+                           ../src/box.cpp
+                           test_hash.cpp
+                           test_hash_tree.cpp
+                           test_directory.cpp
+                           test_box.cpp)
 target_link_libraries(syncboxTest ${Boost_LIBRARIES}
                                   ${CRYPTO++_LIBRARIES})
