refactored to one main process with pub sub threads and inprocess communication (init commit)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,29 @@
 include_directories(../include)
 
-add_executable(syncbox_pub  main_pub.cpp
-                            directory.cpp
-                            box.cpp
-                            hash_tree.cpp
-                            hash.cpp)
-target_link_libraries(syncbox_pub ${Boost_LIBRARIES}
-                                  ${CRYPTO++_LIBRARIES}
-                                  ${ZEROMQ_LIBRARY})
+#add_executable(syncbox_pub  main_pub.cpp
+#                            directory.cpp
+#                            box.cpp
+#                            hash_tree.cpp
+#                            hash.cpp)
+#target_link_libraries(syncbox_pub ${Boost_LIBRARIES}
+#                                  ${CRYPTO++_LIBRARIES}
+#                                  ${ZEROMQ_LIBRARY})
+#
+#add_executable(syncbox_sub  main_sub.cpp
+#                            directory.cpp
+#                            box.cpp
+#                            hash_tree.cpp
+#                            hash.cpp)
+#target_link_libraries(syncbox_sub ${Boost_LIBRARIES}
+#                                  ${CRYPTO++_LIBRARIES}
+#                                  ${ZEROMQ_LIBRARY})
 
-add_executable(syncbox_sub  main_sub.cpp
+add_executable(syncbox_sub  main.cpp
                             directory.cpp
                             box.cpp
                             hash_tree.cpp
                             hash.cpp)
-target_link_libraries(syncbox_sub ${Boost_LIBRARIES}
+target_link_libraries(syncbox_sub ${CMAKE_THREAD_LIBS_INIT}
+                                  ${Boost_LIBRARIES}
                                   ${CRYPTO++_LIBRARIES}
                                   ${ZEROMQ_LIBRARY})
