now using boxoffice singleton as broker between sub and pub; the boxoffice will have all the boxes and send/receive accordingly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@ add_executable(syncbox  main.cpp
                         directory.cpp
                         box.cpp
                         hash_tree.cpp
-                        hash.cpp)
+                        hash.cpp
+                        boxoffice.cpp)
 target_link_libraries(syncbox ${CMAKE_THREAD_LIBS_INIT}
                               ${Boost_LIBRARIES}
                               ${CRYPTO++_LIBRARIES}
