added publisher class for publisher-channel abstraction and simultaneous sending across different channels

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,8 @@ add_executable(syncbox  main.cpp
                         box.cpp
                         hash_tree.cpp
                         hash.cpp
-                        boxoffice.cpp)
+                        boxoffice.cpp
+                        publisher.cpp)
 target_link_libraries(syncbox ${CMAKE_THREAD_LIBS_INIT}
                               ${Boost_LIBRARIES}
                               ${CRYPTO++_LIBRARIES}
