updated Box class, now it creates an fd, watches for all dirs, pushes messages to Boxoffice, and simultaneously polls inotify events and broadcast events

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,5 +24,7 @@ add_executable(syncboxTest testMain.cpp
                            test_hash_tree.cpp
                            test_directory.cpp
                            test_box.cpp)
-target_link_libraries(syncboxTest ${Boost_LIBRARIES}
-                                  ${CRYPTO++_LIBRARIES})
+target_link_libraries(syncboxTest ${CMAKE_THREAD_LIBS_INIT}
+                                  ${Boost_LIBRARIES}
+                                  ${CRYPTO++_LIBRARIES}
+                                  ${ZEROMQ_LIBRARY})
