updated for current zmq bindings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(syncbox  main.cpp
                         constants.cpp
                         directory.cpp
                         box.cpp
+                        #boxconfig.cpp
                         hash_tree.cpp
                         hash.cpp
                         boxoffice.cpp
