--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,4 +30,5 @@ target_link_libraries(syncboxTest ${CMAKE_THREAD_LIBS_INIT}
                                   ${Boost_LIBRARIES}
                                   ${CRYPTO++_LIBRARIES}
                                   ${ZEROMQ_LIBRARY}
+                                  ${ZEROMQ_CPP_LIBRARY}
                                   ${MSGPACK_LIBRARY})
