--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,4 +33,4 @@ target_link_libraries(syncboxTest ${CMAKE_THREAD_LIBS_INIT}
                                   ${CRYPTO++_LIBRARIES}
                                   ${ZEROMQ_LIBRARY}
                                   ${ZEROMQ_CPP_LIBRARY}
-                                  ${MSGPACK_LIBRARY})
+                                  ${JSONCPP_LIBRARY})
