--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(syncbox  main.cpp
                         subscriber.cpp)
 target_link_libraries(syncbox ${CMAKE_THREAD_LIBS_INIT}
                               ${Boost_LIBRARIES}
-                              ${CRYPTO++_LIBRARIES}
+                              ${LIBSODIUM_LIBRARY}
                               ${ZEROMQ_LIBRARY}
                               ${ZEROMQ_CPP_LIBRARY}
                               ${JSONCPP_LIBRARY})
