--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,7 +30,7 @@ add_executable(syncboxTest testMain.cpp
                            )
 target_link_libraries(syncboxTest ${CMAKE_THREAD_LIBS_INIT}
                                   ${Boost_LIBRARIES}
-                                  ${CRYPTO++_LIBRARIES}
+                                  ${LIBSODIUM_LIBRARY}
                                   ${ZEROMQ_LIBRARY}
                                   ${ZEROMQ_CPP_LIBRARY}
                                   ${JSONCPP_LIBRARY})
